3.9.0 目录调整